--- a/system/css/themes/classic.css
+++ b/system/css/themes/classic.css
@@ -1,3 +1,44 @@
+.appsHtxt {
+    color: white;
+}
+
+#apps img:hover {
+    background-color: rgba(0, 0, 0, 0.3);
+}
+
+#icons a {
+    
+    color: white;
+    
+}
+#appicons a {
+    
+    color: white;
+    transition: 0s;
+    
+}
+#appicons a:hover {
+	background: white;
+	color: black;
+    transition: 0s;
+}
+
+.context-menu {
+    position: absolute;
+    text-align: center;
+    background: #2c2c2cad;
+    border: 1px solid #2e2e2e;
+    backdrop-filter: blur(0px);
+    -webkit-backdrop-filter: blur(0px);
+    -webkit-box-shadow: 0px 0px 0px 0px #000000; 
+    box-shadow: 0px 0px 0px 0px #000000;
+    border-radius: 10px;
+}
+
+.context-menu ul li {
+    color:white;
+}
+
 #appsmenu {
     margin: 0;
     background-color: #2c2c2cad;
@@ -6,10 +47,12 @@
     border-radius: 10px;
     -webkit-box-shadow: 0px 0px 15px 0px #000000; 
     box-shadow: 0px 0px 15px 0px #000000;
+    bottom: 55px;
     left: 5px;
 }
-#appicons a {
-    transition: 0s;
+desktop {
+	background-color: #3bdefa;
+    background-image: url(../../images/bgs/bgclassic.jpg);
 }
 .currenttheme::before {
     content: "Classic";
@@ -152,6 +195,16 @@ left: 10px;
     border: 2px black solid;
     
   }
+
+  .task.activeTab {
+    transform: scale(1.45);
+    background-color: #2e2e2e;
+}
+
+.task:hover {
+    background: rgba(0, 0, 0, 0.3);
+    color: #FFF;
+}
 
 #icons a {
     transition: 0s;
