--- a/system/css/themes/dock.css
+++ b/system/css/themes/dock.css
@@ -1,56 +1,21 @@
-.task {
-    display: inline-block;
-    border: 2px solid transparent;
-    border-radius: 5px;
-    line-height: 12px;
-    font-size: 15px;
-    margin: 0 10px;
-    background: transparent;
-    font-weight: bold;
-    cursor: pointer;
-    transform: scale(1.25);
-    transition: 0.5s;
-    padding: 0 1px;
+#appsmenu {
+    margin: 0 auto;
+    left: 0 !important;
+    width: 38%;
+    left: 5px;
+    border-radius: 10px;
+    bottom: 55px;
 }
 
-
-.task.activeTab {
-    transform: scale(1.45);
-    background-color: #2e2e2e;
-}
-
-.task:hover {
-    background: rgba(0, 0, 0, 0.3);
-    color: #FFF;
-}
-.task.minimizedTab {
-    transform: scale(1.35);
-    transition: 0.5s;
-}
-.task.minimizedTab:hover {
-    transform: scale(1.35);
-}
-.task.closed {
-    display: none;
-    transition: 0.5s;
-    
+.currenttheme::before {
+    content: "Docked Theme";
 }
 #taskbar {
-	position: absolute;
-	height: 42px;
     width: 38%;
-	border-top: 2px solid transparent;
-	bottom: 0;
-	left: 0;
-	right: 0;
-    margin: 0 auto;
-	background: #2c2c2cad;
-    border-radius: 20px;
-    backdrop-filter: blur(4px);
-    -webkit-backdrop-filter: blur(4px);
-	z-index: 99998;
-    transition: 1s;
-    -webkit-box-shadow: 0px 0px 15px 0px #000000; 
-    box-shadow: 0px 0px 15px 0px #000000;
-    text-align: center;
+    border-radius: 10px;
+    text-align: left !important;
 }
+
+
+
+
