--- a/system/css/themes/metro.css
+++ b/system/css/themes/metro.css
@@ -15,6 +15,7 @@
       text-align: unset !important;
       margin: 15px 10px;
       font-size: 28px;
+      color: white;
   }
   .appsHtxt::before {
       content: "Start";
@@ -57,10 +58,10 @@
       display: inline-table;
       cursor: pointer;
       padding: 10px 15px;
-      font-family: Arial, Helvetica, sans-serif; 
+      font-family: Arial, Helvetica, sans-serif;
       text-decoration: none;
+      color: white;
       background: #00000040;
-      
   }
   #appicons a:hover {
       
@@ -74,11 +75,7 @@
   }
   
   
-  .powerOptions {
-	position: absolute;
-	top: 15px;
-	right: 15px;
-}
+
   
   
   
@@ -159,15 +156,7 @@
       overflow: hidden;
   }
   
-  .task.activeTab {
-      transform: scale(1.45);
-      background-color: #2e2e2e;
-  }
-  
-  .task:hover {
-      background: rgba(0, 0, 0, 0.3);
-      color: #FFF;
-  }
+
   .task.minimizedTab {
       transform: scale(1.35);
       transition: 0.5s;
