--- a/apps/bronze/css/style.css
+++ b/apps/bronze/css/style.css
@@ -26,14 +26,14 @@ embed {
 
 button {
   border: 2px solid #2C2C2B;
-        border-radius: 5px;
-        font-size: 15px;
-        /* padding: 1px 4px; */
-        background: #CCC;
-        font-weight: bold;
-        cursor: pointer;
-        height: 30px;
-        margin: 0px 2px;
+  border-radius: 5px;
+  font-size: 15px;
+  padding: 1px 4px;
+  background: #CCC;
+  font-weight: bold;
+  cursor: pointer;
+  height: 30px;
+  margin: -5px 0px;
 }
 
 #bronzeHome {
