--- a/system/css/default.css
+++ b/system/css/default.css
@@ -59,7 +59,7 @@ input,select{vertical-align:middle}
   }
 
 
-.appsBtn, .appsHtxt {
+.appsBtn, .appsHtxt, #appicons a {
     font-family: Arial, Helvetica, sans-serif;
 }
 .appsHtxt {
@@ -75,7 +75,7 @@ input,select{vertical-align:middle}
 }
     
 .currentversion::before {
-    content: "22700.11";
+    content: "22700.51";
 }
 
 .appsBtn {
@@ -110,9 +110,9 @@ desktop {
     position: fixed;
     height: 100%;
     width: 100%;
-	background-color: #3bdefa;
+	background-color: #3bdefa !important;
     background-image: url(../images/bgs/bglight.jpg);
-    background-size: cover;
+    background-size: cover !important;
     overflow: hidden;
     top: 0;
     bottom: 0;
@@ -270,7 +270,7 @@ desktop {
 #appsmenu {
     position: fixed;
     /* margin: 0 auto; */
-    width: 450px;
+    width: 260px;
     height: 0px;
     left: 0;
     right: 0;
@@ -292,28 +292,42 @@ desktop {
 }
 
 
-
-
 #appicons {
-	position: absolute;
-	z-index: 10;
-	top: 52px;
-	height: 80%;
-	/* left: 5px; */
-	/* overflow-y: scroll; */
+	background:transparent; 
+    border:solid 1px transparent; 
+    margin: 7px 0 7px 7px;
+    height: 78%;
+    overflow-y: scroll;
+    float:left; 
+    display:block; 
+    padding:0; 
+    list-style:none;
 }
 #appicons a {
-    display: inline-table;
+    border:solid 1px transparent; 
+    display:block; 
+    padding:3px; 
+    margin:3px;
+    color:black; 
+    text-decoration:none; 
+    min-width:220px;
     cursor: pointer;
-    padding: 2px 8px;
-    font-family: Arial, Helvetica, sans-serif;
-    color: black;
-    border-radius: 5px;
-    transition: 0.2s;
+    text-align: left;
 }
 #appicons a:hover {
-	background: black;
-	color: white;
+	moz-border-radius:3px; 
+    -webkit-border-radius:3px;
+    background: #ffffff7a;
+    border: 1px solid white;
+    transition: 0.1s;
+}
+#appicons a img {
+    border:0; 
+    vertical-align:middle; 
+    margin:0 5px 0 0;
+}
+#appicons a br {
+    display: none;
 }
 
 
