--- a/system/css/themes/classic.css
+++ b/system/css/themes/classic.css
@@ -11,12 +11,7 @@
     color: white;
     
 }
-#appicons a {
-    
-    color: white;
-    transition: 0s;
-    
-}
+
 #appicons a:hover {
 	background: white;
 	color: black;
@@ -40,7 +35,9 @@
 }
 
 #appsmenu {
+    position: fixed;
     margin: 0;
+    width: 450px;
     background-color: #2c2c2cad;
     backdrop-filter: blur(0px);
     -webkit-backdrop-filter: blur(0px);
@@ -50,6 +47,37 @@
     bottom: 55px;
     left: 5px;
 }
+
+#appicons {
+	position: absolute;
+	z-index: 10;
+	top: 52px;
+	height: 75%;
+	/* left: 5px; */
+	/* overflow-y: scroll; */
+}
+#appicons a br {
+    display: block;
+}
+#appicons a {
+    display: inline-table;
+    cursor: pointer;
+    padding: 2px 8px;
+    font-family: Arial, Helvetica, sans-serif;
+    color: white;
+    border-radius: 5px;
+    transition: 0s;
+    border: solid 0px transparent;
+    min-width: 0px;
+    text-align: unset;
+}
+#appicons a:hover {
+	background: rgb(255, 255, 255);
+	color: black;
+    border: none;
+}
+
+
 desktop {
 	background-color: #3bdefa;
     background-image: url(../../images/bgs/bgclassic.jpg);
