--- a/system/css/themes/dock.css
+++ b/system/css/themes/dock.css
@@ -7,6 +7,37 @@
     bottom: 55px;
 }
 
+#appicons {
+	position: absolute;
+	z-index: 10;
+	top: 52px;
+	height: 75%;
+    
+	/* left: 5px; */
+	/* overflow-y: scroll; */
+}
+#appicons a br {
+    display: block;
+}
+#appicons a {
+    display: inline-table;
+    cursor: pointer;
+    padding: 2px 8px;
+    font-family: Arial, Helvetica, sans-serif;
+    color: black;
+    border-radius: 5px;
+    transition: 0.2s;
+    border: solid 0px transparent;
+    min-width: 0px;
+    text-align: unset;
+}
+#appicons a:hover {
+	background: rgb(255, 255, 255);
+	color: black;
+    border: none;
+}
+
+
 .currenttheme::before {
     content: "Docked Theme";
 }
