--- a/system/css/themes/metro.css
+++ b/system/css/themes/metro.css
@@ -52,6 +52,7 @@
   
   #appicons {
       left: 5px;
+      height: 80%;
   }
   #appicons a {
       margin: 1px 0;
@@ -62,11 +63,13 @@
       text-decoration: none;
       color: white;
       background: #00000040;
+      border-radius: 0px;
   }
   #appicons a:hover {
       
       background: #00000024;
       color: #FFF;
+      border-radius: 0px;
   
   }
   
