--- a/system/css/themes/modern.css
+++ b/system/css/themes/modern.css
@@ -2,6 +2,7 @@
     margin: 0 auto;
     left: 0 !important;
     left: 5px;
+    width: 450px;
     border-radius: 10px;
     bottom: 55px;
     backdrop-filter: blur(10px);
@@ -9,6 +10,35 @@
     -webkit-box-shadow: 0px 0px 15px 0px #000000;
     box-shadow: 0px 0px 15px 0px #000000;
     background-color: #2c2c2cad;
+}
+#appicons {
+	position: absolute;
+	z-index: 10;
+	top: 52px;
+	height: 75%;
+    
+	/* left: 5px; */
+	/* overflow-y: scroll; */
+}
+#appicons a br {
+    display: block;
+}
+#appicons a {
+    display: inline-table;
+    cursor: pointer;
+    padding: 2px 8px;
+    font-family: Arial, Helvetica, sans-serif;
+    color: white;
+    border-radius: 5px;
+    transition: 0.2s;
+    border: solid 0px transparent;
+    min-width: 0px;
+    text-align: unset;
+}
+#appicons a:hover {
+	background: rgb(255, 255, 255);
+	color: black;
+    border: none;
 }
 
 .currenttheme::before {
