--- a/system/css/style.css
+++ b/system/css/style.css
@@ -62,29 +62,6 @@ input,select{vertical-align:middle}
     width: 97%;
     font-size: 15px;
 }
-#appsmenu {
-    position: fixed;
-    width: 260px;
-    height: 0px;
-    left: 0;
-    right: 0;
-    bottom: 34px;
-    z-index: 2;
-    overflow-x: hidden;
-    overflow-y: hidden;
-    transition: 0.5s;
-    background-color: #9d9d9dad;
-    backdrop-filter: blur(6px);
-    -webkit-backdrop-filter: blur(6px);
-    border-top-right-radius: 10px;
-    -webkit-box-shadow: 0px 0px 0px 0px #000000;
-    box-shadow: 0px 0px 0px 0px #000000;
-}
-
-#appsmenu.opened {
-    height: 450px; 
-}
-
 
 #appsmenu {
     position: fixed;
@@ -107,7 +84,7 @@ input,select{vertical-align:middle}
 }
 
 #appsmenu.opened {
-    height: 450px; 
+    height: 415px; 
 }
 
 
@@ -123,21 +100,18 @@ input,select{vertical-align:middle}
     list-style:none;
 }
 #appicons a {
-    border:
-    solid 1px transparent;
-    display:
-    block; 
+    border: solid 1px transparent;
+    display: block; 
     padding:3px; 
     margin:3px;
     color: white;
-    text-decoration:
-    none; 
+    text-decoration: none; 
     min-width:220px;
     cursor: pointer;
     text-align: left;
 }
 #appicons a:hover {
-	moz-border-radius:3px; 
+	-moz-border-radius:3px; 
     -webkit-border-radius:3px;
     background: #0000007a;
     border: 1px solid white;
@@ -241,6 +215,7 @@ input,select{vertical-align:middle}
     left: 0 !important;
     border-radius: 0;
     bottom: 32px !important;
+    border: none !important;
 }
 .fullSizeWindow .ui-resizable-handle {
 	display: none;
@@ -382,24 +357,32 @@ input,select{vertical-align:middle}
 	background: #00000085;
 	backdrop-filter: blur(6px);
 	-webkit-backdrop-filter: blur(6px);
-	-webkit-box-shadow: 0px 0px 15px 0px #000000;
-	/* box-shadow: 0px 0px 15px 0px #000000; */
+	
 }
 #icons {
 	position: absolute;
 	z-index: 10;
 	top: 20px;
 	left: 20px;
-	display: none;
 }
 #icons a {
-    display: block;
+    display: table;
     cursor: pointer;
     padding: 2px 10px;
+    text-align: center;
+    transition: 0.11s;
+    margin-top: 5px;
 }
 #icons a:hover {
-	background: #000;
-	color: #FFF;
+    background: #00000050;
+	backdrop-filter: blur(3px);
+	-webkit-backdrop-filter: blur(3px);
+    color: #FFF;
+    border-radius: 5px;
+    transition: 0.2s;
+}
+#icons img {
+    padding: 2px;
 }
 #watermark {
     position: absolute;
