--- a/system/css/themes/classic.css
+++ b/system/css/themes/classic.css
@@ -50,7 +50,7 @@ hr {
 #appsmenu {
     position: fixed;
     margin: 0;
-    height: 450px;
+    width: 450px;
     background-color: #2c2c2cad !important;
     backdrop-filter: blur(0px);
     -webkit-backdrop-filter: blur(0px);
@@ -61,7 +61,7 @@ hr {
     left: 5px;
 }
 #appsmenu.opened{
-    width: 450px;
+    height: 450px;
 }
 
 .appsPanel {
@@ -99,9 +99,7 @@ hr {
 a, h1, p, ul, input {
     color: black;
 }
-#startCheck, #startCheckText, #startCheckBR {
-    display: none;
-}
+
 h1 {
     color: black;
 }
@@ -126,7 +124,7 @@ h1 {
     background: grey;
     border-bottom: 2px solid #000;
     padding: 2px;
-    border-radius: 5px;
+    border-radius: 4px !important;
     cursor: move;
     height: 25px;
     margin: 0px !important;
@@ -260,4 +258,7 @@ left: 10px;
 
 #icons a {
     transition: 0s;
+}
+.fullSizeWindow {
+z-index: 1000 !important;    
 }
