--- a/system/css/style.css
+++ b/system/css/style.css
@@ -141,10 +141,9 @@ desktop {
     position: static;
 }
 #abranding {
-        display: inline-flex;
+        display: flow-root;
        align-items:center;
        font-size: 1.5em;
-       font-weight: bold; 
 }
 
   .tab {
