--- a/system/css/themes/metro.css
+++ b/system/css/themes/metro.css
@@ -1,17 +1,19 @@
-@media screen and (max-width:1024px) {
-    #themesrow, .themestext, .themeshr {
+@media screen and (max-width:769px) {
+    #themesrow, .themestext, .themeshr, #app6 {
         display: none !important;
+    }
+    #taskbar {
+        bottom: 5px;
     }
   }
   
+  .ui-icon-gripsmall-diagonal-se {
+    display: none;
+}
+
+
   /* Context menu */
 .context-menu {
-    position: absolute;
-    text-align: center;
-    background: transparent;
-    border: 3px solid transparent;
-    backdrop-filter: blur(6px);
-    -webkit-backdrop-filter: blur(6px);
     -webkit-box-shadow: 0px 0px 0px 0px #000000;
     box-shadow: 0px 0px 0px 0px #000000;
     border-radius: 0px;
@@ -44,8 +46,9 @@
       width: 0%;
       right: 0;
       bottom: 0;
+      left:0;
       z-index: 2;
-      border-top-right-radius: 0px;
+      border-radius: 0px;
   }
   
   #appsmenu.opened {
@@ -159,7 +162,9 @@
       overflow: hidden;
   }
   
-  
+  .window .windowHeader > span {
+    border-radius: 0px;
+}
   
   
   
